...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:text="Recent Releases"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#ffc107"
                android:textSize="18sp"
                android:textStyle="bold"
                />

...
